tests/sksl/errors/IncompleteFunctionCall.glsl
### Compilation failed:

error: 2: expected '(' to begin function call
error: 3: expected a type, but found 'return'
2 errors
